fix: mobile menu spacing and icon

--- a/src/components/MobileMenu/MobileMenu.scss
+++ b/src/components/MobileMenu/MobileMenu.scss
@@ -2,13 +2,16 @@
 @use "../../sass/abstract/variables.scss" as *;
 
 .mobile-menu {
-  // width: 80%;
-  position: sticky;
-  bottom: 1rem;
+  //mobile menu card
+  position: fixed;
+  bottom: 0rem;
+  width: calc(100% - ($mobile-spacing-side * 2));
+  height: 5rem;
   margin: $mobile-spacing-side;
-  background-color: orange;
-  border-radius: 1rem;
-  z-index: 0;
+  background-color: white;
+  box-shadow: $card-shadow;
+  border-radius: 2.5rem;
+  text-align: center;
 
   &__nav {
   }
@@ -16,7 +19,7 @@
   &__list {
     display: flex;
     list-style: none;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
     margin: 0 auto;
     justify-content: space-between;
   }
@@ -25,13 +28,34 @@
     color: black;
     text-decoration: none;
     font-size: 0.75rem;
+    display: flex;
+    justify-items: center;
   }
 
   &__img-container {
+    // menu button
     display: flex;
     text-align: center;
     flex-direction: column;
-    width: 3rem;
+    width: 4rem;
+    height: 4rem;
+    background: $primary;
+    border-radius: 50%;
+    box-shadow: $card-shadow;
+  }
+
+  &__home-icon {
+  }
+
+  &__category-icon {
+    padding: 0.34rem;
+  }
+
+  &__heart-icon {
+  }
+
+  &__profile-icon {
+    padding: 0.4rem;
   }
 
   @include tablet {
